# nakata-agentguard

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: bench_guard.py
examples/: basic_usage.py  metis_hook.sh  metis_hooks_toml.toml  metis_setup.sh
src/agentguard/: __init__.py  __main__.py  allowlist.py  cli.py  guard.py  models.py  rules.py  server.py
src/agentguard/detectors/: __init__.py  budget.py  danger.py  loop.py  output.py  rate.py
tests/: test_cli_commands.py  test_danger.py  test_guard.py  test_loop.py  test_near_dup_error_loop.py  test_new_patterns.py  test_output_allowlist.py  test_server.py  test_server_v2.py  test_stats_snapshot.py
