[project]
name = "nakata-agentguard"
version = "0.2.0"
description = "Lightweight agentic loop detector and safety monitor. No LLM required."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "atakan", email = "hey@nakata.app" }]
keywords = ["llm", "agent", "safety", "loop-detection", "agentic", "guardrails", "monitoring"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Security",
]
dependencies = []   # zero required deps — pure Python

[project.optional-dependencies]
serve = ["fastapi>=0.100", "uvicorn>=0.23", "pydantic>=2.0"]
dev   = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.5", "httpx>=0.27", "fastapi>=0.100", "uvicorn>=0.23", "pydantic>=2.0"]

[project.scripts]
agentguard = "agentguard.cli:main"

[project.urls]
Homepage   = "https://github.com/nakata-app/agentguard"
Repository = "https://github.com/nakata-app/agentguard"

[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where   = ["src"]
include = ["agentguard*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"
